--- a/README.Rmd
+++ b/README.Rmd
@@ -6,8 +6,14 @@ output: github_document
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  fig.path = "man/figures/README-",
-  out.width = "100%"
+  fig.path = "man/figures/",
+  fig.align = "center",
+  dpi = 120,
+  out.width = "70%",
+  message = FALSE,   
+  warning = FALSE,  
+  results = "hide", 
+  echo = TRUE        
 )
 ```
 
